# Cube-Pose-Estimation-with-ArUco

./: CMakeLists.txt  README.md  package.xml
other_approaches/: cube_detect_class.py  retry.py
scripts/: arucoDetection.py  arucoPoseEstimation.py
